# dynamic_obstacle_detector

./: CMakeLists.txt  README.md  package.xml
launch/: dynamic_obs_detector.launch  frogbag.rviz  my_laser_config.yaml
msg/: DynamicObstacle.msg  DynamicObstacleStamped.msg  DynamicObstacles.msg
src/: dynamic_obstacle_detector.cpp  laser_clustering.py  obstacle_kf.hpp
